--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
         "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": ".dist/prod" 
+          "distDir": ".dist/prod",
+          "runtime": "bun@1.0"
         }
       }
     ],
